correction après visio avec prof , suppr display flex sur body et alignement refait , taille des elements revue , titles revus , figure pour la profile pict , suppr aside rempl par div contenu dans main , creation d'ul pour toutes les listes et mise en forme des lignes avec display flex

--- a/Assets/Style/style-index.css
+++ b/Assets/Style/style-index.css
@@ -26,11 +26,12 @@ et ci dessous Raleway pour les contenus*/
   src: url(../Fonts/Raleway-Bold.otf) format("opentype");
 }
 
-.h1-header {
+.name-header {
   font-family: "Lato", sans-serif;
   font-size: 2.5rem;
+  font-weight: 700;
 }
-.h2-header {
+.h1-header {
   font-family: "Lato", sans-serif;
   font-size: 1.2rem;
   font-weight: 500;
@@ -50,8 +51,6 @@ et ci dessous Raleway pour les contenus*/
 } /* consigne visant à comprendre toutes les marges et bordures dans les largeurs et hauteurs */
 
 body {
-  display: flex;
-  justify-content: center;
   font-family: "raleway-regular", sans-serif;
   font-weight: 300;
   font-size: 0.8rem;
@@ -59,13 +58,15 @@ body {
 }
 
 #main-container {
-  max-width: 1160px;
+  width: 1160px;
+  margin: 0 auto;
 }
 
 header {
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 1160px;
   background-color: #17abb3;
   column-gap: 300px;
   height: 200px;
@@ -102,12 +103,12 @@ header {
   width: 500px;
 }
 
-.h1-header {
+.name-header {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.h2-header {
+.h1-header {
   margin-top: 0;
 }
 
@@ -140,9 +141,11 @@ a {
 #container-2 {
   display: flex;
   flex-direction: row;
+  width: 1160px;
 }
 
-main {
+#right-content {
+  /* container pour le contenu principal du cv */
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -152,7 +155,8 @@ main {
   background-color: #ffffff;
 }
 
-aside {
+#left-content {
+  /* container pour le contenu secondaire du cv */
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -167,15 +171,25 @@ aside {
   text-indent: 1rem;
 }
 
-.double-line {
+.hover-1 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 1px;
-} /* double line me permet d'avoir mon texte bold a gauche et mon texte right blue à droite grace à space between */
+  margin-bottom: 20px;
+}
+
+.text-left {
+  width: 370px;
+}
+
+.date {
+  text-align: right;
+  width: 310px;
+}
 
 .bold {
   font-weight: bold;
+  display: block;
 }
 
 .description {
@@ -190,6 +204,11 @@ aside {
   color: #17abb3;
 }
 
+.list-1 {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 .inline {
   display: flex;
   flex-direction: row;
@@ -198,6 +217,12 @@ aside {
   flex-wrap: wrap;
 } /* avec inline j'ai mon texte bold aside à gauche et je peux mettre en face de lui mes etoiles mises en forme grace au container
 stars et leurs taille est uniformisée dans filled stars et empty stars */
+
+.bold-aside {
+  font-weight: bold;
+  width: 180px;
+  margin: 0;
+}
 
 .stars {
   display: flex;
@@ -209,12 +234,6 @@ stars et leurs taille est uniformisée dans filled stars et empty stars */
   color: #17abb3;
 }
 
-.bold-aside {
-  font-weight: bold;
-  width: 180px;
-  margin: 0;
-}
-
 .filled-stars {
   font-size: 1.3rem;
 }
@@ -223,23 +242,20 @@ stars et leurs taille est uniformisée dans filled stars et empty stars */
   font-size: 1.1rem;
 }
 
-#Langages {
+.langages {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
-  row-gap: 7px;
+  padding-bottom: 5px;
 }
 
 .langage-content {
-  margin: 0;
+  width: 120px;
 }
 
 .list {
   list-style-type: square;
-}
-
-ul {
   padding-left: 18px;
   color: #17abb3;
   font-size: 1.2rem;
@@ -256,6 +272,7 @@ footer {
   color: #ffffff;
   text-align: center;
   padding: 15px;
+  width: 1160px;
 }
 
 #container-3 {
@@ -280,10 +297,11 @@ footer {
   background-color: rgba(227, 227, 227, 40%);
   border-left: 5px solid;
   border-left-color: #17abb3;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  padding-left: 4px;
-  padding-right: 4px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: larger;
 }
 
 .Logo-footer:hover {
